--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,27 @@
 /* For Chrome, Safari, and Edge */
 ::-webkit-scrollbar {
-    width: 12px;               /* Width of the entire scrollbar */
-    height: 12px;              /* Height of the scrollbar (for horizontal scrollbars) */
+  width: 12px; /* Width of the entire scrollbar */
+  height: 12px; /* Height of the scrollbar (for horizontal scrollbars) */
 }
 
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;       /* Background of the track (scrollbar background) */
+  background: #f1f1f1; /* Background of the track (scrollbar background) */
 }
 
 ::-webkit-scrollbar-thumb {
-    background-color: #888;    /* Color of the scrollbar handle */
-    border-radius: 10px;       /* Roundness of the scrollbar handle */
-    border: 3px solid #f1f1f1; /* Padding around the scrollbar handle */
+  background-color: #888; /* Color of the scrollbar handle */
+  border-radius: 10px; /* Roundness of the scrollbar handle */
+  border: 3px solid #f1f1f1; /* Padding around the scrollbar handle */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #555;          /* Scrollbar handle color on hover */
+  background: #555; /* Scrollbar handle color on hover */
 }
 
 /* For Firefox */
 * {
-    scrollbar-width: thin;         /* Makes the scrollbar thinner */
-    scrollbar-color: #888 #f1f1f1; /* Color of the scrollbar thumb and track */
+  scrollbar-width: thin; /* Makes the scrollbar thinner */
+  scrollbar-color: #888 #f1f1f1; /* Color of the scrollbar thumb and track */
 }
 .comment-box {
   width: 100%;
@@ -33,4 +33,16 @@
   border: 1px solid #333;
   border-radius: 5px;
   background-color: #eafff0;
+}
+
+/* Chrome, Edge, Safari */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
